[package]
name = "tproxy-production"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "net", "io-util", "time"] }
pnet = "0.34"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
cookie = "0.18"
cookie_store = "0.21"
base64 = "0.21"
ctrlc = "3.5.1"
once_cell = "1.21.3"
nfq-updated = "0.2.6"
rand_distr = "0.5.1"

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemallocator = { version = "0.5", features = ["profiling"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
