[package]
name = "tproxy-production"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full", "net", "io-util", "time", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "net"] }
rand = "0.9"
rand_distr = "0.5"
base64 = "0.22"
bytes = "1.5"
http = "1.0"
regex = "1.10"
url = "2.5"
pnet = "0.35"
tracing = "0.1"
parking_lot = "0.12"
cookie = "0.18"
once_cell = "1.19"
nfq = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[target.'cfg(target_env = "musl")'.dependencies]
jemallocator = "0.5"